[workspace]
[package]
name = "marketplace"
version = "0.1.0"
description = "Auctioneer for NFT marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
mpl-auction-house = { path = "../../auction-house/program", features = ["cpi", "no-entrypoint"]}